--- a/style.css
+++ b/style.css
@@ -3,21 +3,19 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
-    width: 100vw;
+    min-height: 100vh;
     margin: 0;
-    padding: 0;
-    overflow: hidden;
+    padding: 20px;
+    overflow: auto;
 }
 
 .container {
     background: #005058;
-    padding: 40px 20px;
+    padding: 5%;
     border-radius: 15px;
-    box-shadow: 0 0 20px #5dbac3;
+    box-shadow: 0 0 15px #5dbac3;
     width: 90%;
     max-width: 400px;
-    min-width: 280px;
     text-align: center;
     color: white;
     font-family: "Inter", sans-serif;
@@ -40,8 +38,7 @@ form {
 }
 
 input, select, textarea {
-    width: 90%;
-    max-width: 350px;
+    width: 100%;
     padding: 10px;
     margin-bottom: 10px;
     border: 1px solid #FFFFFF;
@@ -60,7 +57,7 @@ textarea {
 }
 
 button {
-    padding: 12px 50px;
+    padding: 12px 10%;
     background-color: #FDD02E;
     border: none;
     border-radius: 8px;
@@ -69,6 +66,7 @@ button {
     transition: background-color 0.3s;
     display: block;
     margin: 30px auto 10px;
+    width: 100%;
 }
 
 button:hover {
