--- a/style.css
+++ b/style.css
@@ -57,16 +57,20 @@ textarea {
 }
 
 button {
-    padding: 12px 10%;
+    padding: 12px 42px;
     background-color: #FDD02E;
     border: none;
-    border-radius: 8px;
+    border-radius: 10px;
     color: black;
     cursor: pointer;
     transition: background-color 0.3s;
-    display: block;
-    margin: 30px auto 10px;
-    width: 100%;
+    display: inline-block;
+    margin: auto 10px;
+    margin-top: 45px;
+    min-width: 180px;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 300;
 }
 
 button:hover {
